Expose live media confs on server setup, some borked UI fixes (#8)
* feat: concentrate confs in env, refactor some screenshare data

* fix: build

* fix: some empty vars

* update: env and gitignore

* fix: missing vars

* fix: UI borked

* fix: branding

* chore: cleanup

* feat: drag drop files, no transcode gifs

* fix: spinner when uploading data
